--- a/api/package.json
+++ b/api/package.json
@@ -8,11 +8,11 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "axios": "^1.2.0",
     "express": "^4.18.2",
     "express-subdomain": "^1.0.5",
+    "firebase-admin": "^11.5.0",
     "form-data": "^4.0.0",
     "node-fetch": "^3.2.10",
     "request": "^2.88.2"
