--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.0",
-    "express": "^4.18.2",
-    "express-subdomain": "^1.0.5",
+    "cron": "^3.0.0",
     "firebase-admin": "^11.5.0",
     "form-data": "^4.0.0",
     "node-fetch": "^3.2.10",
