--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,28 +4,31 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
-    "core-js": "^3.8.3",
-    "firebase": "^9.17.1",
-    "roboto-fontface": "*",
+    "chart.js": "^4.4.2",
+    "core-js": "^3.36.1",
+    "firebase": "^9.23.0",
+    "roboto-fontface": "^0.10.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.0",
-    "vuefire": "^3.0.1",
-    "vuetify": "^3.0.0",
-    "webfontloader": "^1.0.0"
+    "vue-chartjs": "^5.3.0",
+    "vue-router": "^4.3.0",
+    "vuefire": "^3.1.23",
+    "vuetify": "^3.5.14",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.3",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "sass": "^1.55.0",
-    "vite": "^3.1.9",
-    "vite-plugin-pwa": "^0.14.4",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12"
+    "@vitejs/plugin-vue": "^3.2.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.24.0",
+    "sass": "^1.74.1",
+    "vite": "^3.2.10",
+    "vite-plugin-pwa": "^0.14.7",
+    "vite-plugin-vuetify": "^1.0.2"
   }
 }
